Rewrite handler, queue service, notify service, begin setup of Spanner + repository